# logictree

./: .coverage  .coveragerc  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  NOTICE.md  README.md  README.txt  conda_requirements.txt  mux2.sv  noxfile.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  setup_logicenv.sh  test_golden_delivery_ckt.py  test_tree_clone.py
.github/workflows/: ci.yml  tests.yml
cli/: main.py
docs/: case_statement.md  checklist.md  cli_usage.md  logic_tree.md
golden_circuits/: case_mux2_simp.sv  expr_const_simp.sv  expr_simp.sv  golden_delivery.sv  golden_delivery2.sv  if_else_if_three_way_tree.sv  if_tree_simple.sv  mux2.rtlil.il  mux2.sv  mux2.ys.ast  rv_alu_decode.sv  rv_alu_decode_simple.sv  tb_delivery.sv
golden_hashes/: expr_const_simp.json  expr_simp.json
grammar/: SystemVerilogSubset.g4
graphviz/: simple_assign.dot
gui/: explorer_server.py
gui/static/: explorer.js
logictree/: SVToLogicTreeLowerer.py  __init__.py  api.py  eval.py  graphviz_utils.py  nodes.py  pipeline.py  transforms.py  transforms_legacy.py  utils.py
logictree/analysis/: gate_count.py
logictree/nodes/: types.py
logictree/nodes/base/: base.py
logictree/nodes/control/: __init__.py  assign.py  case.py  ifstatement.py
logictree/nodes/hole/: hole.py
logictree/nodes/ops/: __init__.py  gates.py  ops.py
logictree/nodes/struct/: __init__.py  module.py
logictree/transforms/: case_to_if.py  signal_resolution.py
logictree/utils/: __init__.py  analysis.py  analysis_output.py  build.py  display.py  gate_factory.py  reduce.py  serialize.py
output/: logic_tree.dot
scripts/: gen_dev_map.py  install_antlr.sh  log_coverage.py  parse_sv.py  to_dot_util.py  to_if_tree.py
src/cli/: main.py
src/gui/: explorer_server.py
src/gui/templates/: index.html
src/logictree/: SVToLogicTreeLowerer.py  __init__.py  __main__.py  api.py  eval.py  graphviz_utils.py  pipeline.py  transforms_legacy.py
src/logictree/analysis/: gate_count.py
src/logictree/nodes/: __init__.py  registry.py  selects.py  types.py
src/logictree/nodes/base/: __init__.py  base.py
src/logictree/nodes/control/: __init__.py  assign.py  case.py  ifstatement.py
src/logictree/nodes/hole/: __init__.py  hole.py
src/logictree/nodes/ops/: __init__.py  comparison.py  gates.py  mux.py  ops.py
src/logictree/nodes/struct/: __init__.py  module.py  statement.py
src/logictree/transforms/: __init__.py  case_to_if.py  if_to_mux.py  signal_resolution.py  simplify.py
src/logictree/utils/: __init__.py  analysis.py  analysis_output.py  ascii_tree.py  build.py  compare.py  debug.py  display.py  formating.py  gate_factory.py  graphviz_export.py  graphviz_utils.py  output.py  overlay.py  paths.py  reduce.py  repair.py  serialize.py  traverse.py  utils_cli.py  visual.py
src/sv_parser/: SimpleVerilogExprLexer.py  SimpleVerilogExprListener.py  SimpleVerilogExprParser.py  SystemVerilogSubsetLexer.py  SystemVerilogSubsetListener.py  SystemVerilogSubsetParser.py  SystemVerilogSubsetVisitor.py  ast_nodes.py  parse.py  visitor.py
sv_parser/: SimpleVerilogExprListener.py  SimpleVerilogExprParser.py  SystemVerilogSubsetLexer.py  SystemVerilogSubsetListener.py  SystemVerilogSubsetParser.py  SystemVerilogSubsetVisitor.py  ast_nodes.py  visitor.py
tests/: conftest.py  test_analysis_gate_count.py  test_assign_precedence.py  test_basic_module.py  test_bitselect_concat_depth.py  test_bitselects.py  test_bitwise_ops_scalar.py  test_case_statement_rw_semantics.py  test_case_to_if_def_equiv.py  test_case_to_if_equiv.py  test_case_to_if_shape.py  test_caseitem_label_contract.py  test_dataclass_defaults.py  test_dataclass_integrity.py  test_depth_property.py  test_eq_bitvector.py  test_eq_bitvector_systematic.py  test_golden_delivery_ckt.py  test_if_assignments.py  test_immutability.py  test_logic_const_str.py  test_logic_tree_to_json.py  test_logicgate_simplify.py  test_logicop_class.py  test_logicop_classes.py  test_module_structure.py  test_mux_tree_outputs_mux.py  test_ops_exports.py  test_overlay_metadata.py  test_overlay_registry.py  test_serialize.py  test_signal_assignment.py  test_signal_expression_assignment.py  test_simplify.py  test_simplify_logic_tree.py  test_sv_to_logic_tree_fields.py  test_tree_clone.py  test_visualize_if_mux.py  utils.py  utils_bitselect.py
tests/debug/: test_delay_returns.py  test_depth_returns.py
tests/integration/: test_selects_integration.py
tests/unit/: test_comparison_ops.py  test_eval_selects.py  test_if_to_mux_simple.py  test_init_nodes.py  test_mux_tree_to_primatives.py  test_node_init_autocheck.py  test_partselect_eq.py  test_selects_nodes.py  test_width_propagation.py
tests/utils/: viz_helpers.py
utils/: ascii_tree.py  graphviz_export.py  utils_cli.py
