[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "logictree"
version = "0.0.1"
description = "Logictree — a Symbolic IR for SystemVerilog logic"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
authors = [{name = "Joshua Rendon"}]
dependencies = [
  # put runtime deps here, e.g. "graphviz", "sympy>=1.13"
  "bitvector",
  "rich",
  "sympy",
  "dd", # BDD/ZDD library
  "antlr4-python3-runtime>4.13",
  "graphviz" # Python bindings
]

# Optional: dev extras for contributors
[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov",
  "pytest-xdist",
  "ruff",
  "mypy",
  "build", # `python -m build` to make wheels/sdist
  "hypothesis" # property-based testing
]

# console script: `logictree`
[project.scripts]
logictree = "cli.main:main"

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.report]
show_missing = true
skip_covered = false
# Keep reports clean
omit = [
  "tests/*",
  "**/__init__.py"
]

[tool.coverage.run]
branch = true
# Only measure your packages (import names, not paths)
source = ["logictree", "sv_parser"]
# If you someday add xdist or multiprocessing:
concurrency = ["thread", "multiprocessing"]
parallel = true
# Optional, sets a useful context tag (visible in HTML)
dynamic_context = "test_function"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

# Centralize tool configs (optional but nice)
[tool.pytest.ini_options]
addopts = "--cov-context=test"
testpaths = ["tests"]
markers = [
  "unit: Small, isolated tests",
  "props: Property/metamorphic tests",
  "diff: Differential/equivalence tests",
  "integ: End-to-end CLI/flows",
  "slow: Long-running tests",
  "mutation: Mutation-testing harness",
  "flaky: Known flaky tests",
  "requires_sympy: Needs SymPy",
  "requires_graphviz: Needs Graphviz"
]

[tool.ruff]
line-length = 100
target-version = "py311"

# Skip scripts and other noise dirs
exclude = [
  "scripts/",
  "data/",
  "coverage_dashboard/",
  "coverage_dashboard_old/",
  "incomplete_scripts/",
]
[tool.ruff.lint]
# Start small: only enforce core errors and import sorting
select = ["E4", "E7", "E9", "F", "I"]

# Ignore noisy or style-only rules for now
ignore = [
  "F405",  # star imports
  "E402",  # import not at top
  "E701",  # multiple statements on one line
  "E741",  # ambiguous variable names (too noisy at start)
]

# Per-file ignores for __init__.py (allow re-exports)
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.setuptools]
package-dir = {"" = "src"}

# auto-discover packages under src/
[tool.setuptools.packages.find]
where = ["src"]
include = ["logictree*", "sv_parser*", "cli*", "gui*"]
