[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "logictree"
version = "0.0.1"
description = "Logictree — a Symbolic IR for SystemVerilog logic"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
authors = [{name = "Joshua Rendon"}]
dependencies = [
  # put runtime deps here, e.g. "graphviz", "sympy>=1.13"
  "bitvector",
  "rich",
  "sympy",
  "dd", # BDD/ZDD library
  "antlr4-python3-runtime>4.13",
  "graphviz" # Python bindings
]

# Optional: dev extras for contributors
[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov",
  "pytest-xdist",
  "ruff",
  "mypy",
  "build", # `python -m build` to make wheels/sdist
  "hypothesis" # property-based testing
]

# console script: `logictree`
[project.scripts]
logictree = "cli.main:main"

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.report]
show_missing = true
skip_covered = false
# Keep reports clean
omit = [
  "tests/*",
  "**/__init__.py"
]

[tool.coverage.run]
branch = true
# Only measure your packages (import names, not paths)
source = ["logictree", "sv_parser"]
# If you someday add xdist or multiprocessing:
concurrency = ["thread", "multiprocessing"]
parallel = true
# Optional, sets a useful context tag (visible in HTML)
dynamic_context = "test_function"

[tool.mypy]
mypy_path = ["src"]
files = ["src", "tests"]
disallow_untyped_defs = true
ignore_missing_imports = false
check_untyped_defs = true
explicit_package_bases = true
python_version = "3.13"

# only exclude the auto-generated ANTLR files
exclude = [
  "src/sv_parser/SystemVerilogSubsetLexer\\.py$",
  "src/sv_parser/SystemVerilogSubsetParser\\.py$",
  "src/sv_parser/SystemVerilogSubsetListener\\.py$",
  "src/sv_parser/SystemVerilogSubsetVisitor\\.py$"
]

[[tool.mypy.overrides]]
module = ["sympy", "sympy.*", "dd.*", "dd", "antlr4", "antlr4.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "sv_parser.SystemVerilogSubsetParser"
ignore_errors = true
#strict = true
ignore_missing_imports = true
#warn_unused_ignores = true
#warn_return_any = true
#disallow_untyped_defs = true
[[tool.mypy.overrides]]
module = "sv_parser.SystemVerilogSubsetLexer"
ignore_errors = true

# Centralize tool configs (optional but nice)
[tool.pytest.ini_options]
addopts = "--cov-context=test"
testpaths = ["tests"]
markers = [
  "unit: fast constructor/init and isolate tests",
  "props: Property/metamorphic tests (e.g. Hypothesis)",
  "diff: Differential/equivalence tests",
  "integration: multi-node or lowering tests",
  "regression: golden reference or bugfix tests",
  "smoke: super-fast import/run sanity tests (CI pre-check)",
  "cli: tests for command-line interfaces",
  "slow: long-running tests (perf, stress, scalability)",
  "mutation: mutation-testing harness",
  "flaky: known flaky tests, under investigation",
  "requires_sympy: Needs SymPy",
  "requires_graphviz: Needs Graphviz",
  "dev: exploratory / scratch tests (excluded from CI)",
  "known_issue: tracks a bug under investigation (pairs with xfail)"
]

[tool.ruff]
line-length = 100
target-version = "py313"

# Skip scripts and other noise dirs
exclude = [
  "scripts/",
  "data/",
  "coverage_dashboard/",
  "coverage_dashboard_old/",
  "incomplete_scripts/",
]
[tool.ruff.lint]
# Start small: only enforce core errors and import sorting
select = ["E4", "E7", "E9", "F", "I"]

# Ignore noisy or style-only rules for now
ignore = [
  "F405",  # star imports
  "E402",  # import not at top
  "E701",  # multiple statements on one line
  "E741",  # ambiguous variable names (too noisy at start)
]

# Per-file ignores for __init__.py (allow re-exports)
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"src/sv_parser/SystemVerilogSubsetLexer.py"    = ["F403", "F405"]
"src/sv_parser/SystemVerilogSubsetParser.py"   = ["F403", "F405", "E711"]
"src/sv_parser/SystemVerilogSubsetListener.py" = ["F403", "F405"]
"src/sv_parser/SystemVerilogSubsetVisitor.py" = ["F403", "F405"]

[tool.setuptools]
package-dir = {"" = "src"}

# auto-discover packages under src/
[tool.setuptools.packages.find]
where = ["src"]
include = ["logictree*", "sv_parser*", "cli*", "gui*"]
